Fix overflowing text on mobile

--- a/src/less/crt/medialist/explorer.less
+++ b/src/less/crt/medialist/explorer.less
@@ -53,7 +53,15 @@
 					color: @console-color; 
 				}
 			}
+
+
+			.item-container-parent {
+				position: relative;
+				overflow: hidden;
+			}
+
 			.item-container {
+				//position: absolute;
 				&:hover {
 					//background-color: @console-color;
 					//color: @console-bg;
@@ -77,14 +85,21 @@
 					flex-grow: 0;
 					object-fit: cover;
 				}
+
 				.item-info {
 					flex-grow: 1;
 					display: flex;
 					flex-direction: column;
 					justify-content: stretch;
 					margin-left: 8px;
+					max-height: 60px;
+
 					.title {
 						text-transform: uppercase;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						max-height: 60px;
+//						white-space: nowrap;
 					}
 
 					.description {
@@ -114,10 +129,9 @@
 				.item-more-info {
 					flex-grow: 0;
 					min-width: 65px;
-
+					@media @mobile { display: none;}
 					.published {
 						font-size: 14px;
-						@media @mobile { display: none;}
 					}
 				}
 			}
